commented outdated function, added effort value yield from bulbapedia (lol)

--- a/modules/styles/TMstyle.css
+++ b/modules/styles/TMstyle.css
@@ -6,8 +6,15 @@
 
 body {
     font-family: 'Prototype', Fallback, sans-serif;
-  }
+    }
 
+    table{
+        display: none;
+    }
+
+table td, table th {
+    padding: 5px 10px;
+}
   h1.title{
     text-transform: uppercase;
     text-align: center;
