--- a/modules/dice-content/style.css
+++ b/modules/dice-content/style.css
@@ -117,6 +117,7 @@ main {
   /* background-color: white; */
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
+  min-width: 180px;
 
   padding: 0.7rem 2.5rem;
   border-radius: 50rem;
