--- a/modules/quiz-content/style.css
+++ b/modules/quiz-content/style.css
@@ -8,14 +8,6 @@ button:focus {
   outline: none !important;
 }
 
-.container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #quiz {
   width: 100%;
   height: 100vh;
@@ -47,13 +39,17 @@ button:focus {
   border: 1px solid #333533;
 }
 
-#reset {
+#reset,
+#create {
   position: absolute;
   bottom: 70px;
-  left: 50vw - 40px;
   width: 80px;
   margin-top: 7px;
   padding: 8px 14px;
+}
+
+.check {
+  margin-bottom: 15px;
 }
 
 .answer {
@@ -77,11 +73,38 @@ button:focus {
   position: absolute;
   bottom: 75px;
   right: 20px;
-  font-size: 17px;
+  font-size: 16px;
+}
+
+.scorePoint {
+  position: absolute;
+  bottom: 75px;
+  left: 20px;
+  font-size: 16px;
+}
+
+.starter {
+  background: #242423;
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 3;
 }
 
 .disabled {
   pointer-events: none;
+}
+
+.hidden {
+  pointer-events: none;
+  opacity: 0;
 }
 
 .answer.border {
