--- a/modules/quiz-content/style.css
+++ b/modules/quiz-content/style.css
@@ -20,12 +20,37 @@ button:focus {
   position: relative;
 }
 
+@keyframes width-animation {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+#quiz::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 5px;
+  width: 0%;
+  background: #07c837;
+}
+
+#quiz.animate::before {
+  animation: width-animation 7s linear infinite;
+}
+
 #quiz h2 {
+  width: 100;
   font-size: 32px;
   padding: 0 10px;
   text-align: center;
-  position: absolute;
-  top: 50px;
+  align-self: start;
+  /* position: absolute; */
+  margin-bottom: 30px;
   left: 0;
   right: 0;
   color: #fff;
@@ -68,6 +93,10 @@ button:focus {
   display: block;
 }
 
+.answer-box {
+  align-self: center;
+}
+
 .answer.true {
   background: #07c837 !important;
 }
@@ -78,14 +107,14 @@ button:focus {
 
 .scoreFinal {
   position: absolute;
-  bottom: 75px;
+  bottom: 50px;
   right: 20px;
   font-size: 16px;
 }
 
 .scorePoint {
   position: absolute;
-  bottom: 75px;
+  bottom: 50px;
   left: 20px;
   font-size: 16px;
 }
