--- a/modules/dice-content/style.css
+++ b/modules/dice-content/style.css
@@ -152,11 +152,11 @@ main {
   box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
 }
 
-.btn::first-letter {
+/* .btn::first-letter {
   font-size: 2.4rem;
   display: inline-block;
   margin-right: 0.7rem;
-}
+} */
 
 .btn--new {
   top: 4rem;
@@ -212,11 +212,11 @@ main {
   top: 54.5rem;
   font-size: 12px;
 }
-.btn::first-letter {
+/* .btn::first-letter {
   font-size: 12px;
   display: inline;
   margin-right: 0;
-}
+} */
 
 /* popup */
 .overlay {
