--- a/modules/dice-content/style.css
+++ b/modules/dice-content/style.css
@@ -57,7 +57,7 @@ main {
 }
 .name:after {
   content: '';
-  background: url('dice-6.png') center no-repeat;
+  background: url('img/dice-6.png') center no-repeat;
   background-size: cover;
   position: absolute;
   width: 25px;
@@ -69,7 +69,7 @@ main {
 }
 .name:before {
   content: '';
-  background: url('dice-6.png') center no-repeat;
+  background: url('img/dice-6.png') center no-repeat;
   background-size: cover;
   position: absolute;
   width: 25px;
