transition time change

--- a/modules/memo-content/memo-style.css
+++ b/modules/memo-content/memo-style.css
@@ -38,6 +38,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 1s ease-in-out;
 }
 #win h1 {
   color: #ffffff;
