memory game h1 size

--- a/modules/memo-content/memo-style.css
+++ b/modules/memo-content/memo-style.css
@@ -45,7 +45,7 @@ body {
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
-  font-size: 25px;
+  font-size: 10rem;
   font-weight: 300;
 }
 
