flexbox to memo pseudo el

--- a/modules/memo-wiesio-content/memo-wiesio-style.css
+++ b/modules/memo-wiesio-content/memo-wiesio-style.css
@@ -105,6 +105,8 @@ body {
   text-transform: uppercase;
   transform: rotateY(180deg);
   transition: all 0.5s ease-in-out;
+  display: flex;
+  justify-content: center;
 }
 
 /* memo field colors */
