--- a/modules/memo-wiesio-content/memo-wiesio-style.css
+++ b/modules/memo-wiesio-content/memo-wiesio-style.css
@@ -57,7 +57,8 @@ body {
   border: none;
   background: #fdc500;
   color: #fff;
-  padding: 8px 12px;
+  padding: 11px 17px;
+  font-size: 18px;
   border-radius: 0;
   position: absolute;
   top: 10vh;
