--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -9,7 +9,7 @@ button:focus {
   outline: none !important;
 }
 
-#content {
+#main {
   width: 100%;
   height: 100vh;
   padding: 0px;
@@ -21,7 +21,7 @@ button:focus {
   position: relative;
 }
 
-#content h2 {
+#main h2 {
   width: 100vw;
   font-size: 32px;
   padding: 0 10px;
@@ -31,7 +31,7 @@ button:focus {
   color: #fff;
 }
 
-#content button {
+#main button {
   transition: all 0.3s ease-in-out;
   font-size: 16px;
   width: 80vw !important;
