--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -11,33 +11,56 @@ button:focus {
 
 #main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0px;
   background: #242423;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   position: relative;
 }
 
-#main h2 {
-  width: 100vw;
-  font-size: 32px;
+#sidebar {
+  width: 30vw;
+  min-height: 100vh;
+  border-right: 2px solid #07c837;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#sidebar h2 {
   padding: 0 10px;
   text-align: center;
   align-self: start;
-  margin-bottom: 30px;
+  margin: 20px 0 20px 0;
   color: #fff;
 }
 
-#main button {
+#sidebar button {
   transition: all 0.3s ease-in-out;
   font-size: 16px;
-  width: 80vw !important;
   margin-bottom: 20px;
   padding: 10px 15px;
   display: block;
   background: #07c837;
   border: none;
+}
+
+#list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+}
+
+#list .single {
+  padding: 15px;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+#list .single.show {
+  opacity: 1;
 }
