created modal on Api call for single recipe

--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -1,9 +1,18 @@
 * {
   margin: 0;
   font-family: 'JetBrains Mono', monospace;
-  text-transform: uppercase;
   color: #fff;
   box-sizing: border-box;
+}
+button {
+  transition: all 0.3s ease-in-out;
+  font-size: 16px;
+  margin-bottom: 20px;
+  padding: 10px 15px;
+  display: block;
+  background: #07c837;
+  border: none;
+  cursor: pointer;
 }
 button:focus {
   outline: none !important;
@@ -36,16 +45,7 @@ button:focus {
   align-self: start;
   margin: 20px 0 20px 0;
   color: #fff;
-}
-
-#sidebar button {
-  transition: all 0.3s ease-in-out;
-  font-size: 16px;
-  margin-bottom: 20px;
-  padding: 10px 15px;
-  display: block;
-  background: #07c837;
-  border: none;
+  width: 100%;
 }
 
 #list {
@@ -53,14 +53,57 @@ button:focus {
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
+  transition: all 0.3s ease-in-out;
 }
 
 #list .single {
   padding: 15px;
-  opacity: 0;
+  opacity: 1;
+  pointer-events: all;
   transition: all 0.3s ease-in-out;
 }
 
 #list .single.show {
   opacity: 1;
+}
+
+.hidden {
+  pointer-events: none !important;
+  opacity: 0 !important;
+}
+#overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+  pointer-events: all;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+  z-index: 100;
+  cursor: pointer;
+}
+
+.modal {
+  position: absolute;
+  top: 20vh;
+  left: 25vh;
+  min-height: 40vh;
+  width: 50vw;
+  pointer-events: all;
+  opacity: 1;
+  background: #242423;
+  padding: 20px;
+}
+
+.modal a.link {
+  transition: all 0.3s ease-in-out;
+  font-size: 16px;
+  margin-bottom: 20px;
+  padding: 10px 15px;
+  display: block;
+  background: #07c837;
+  border: none;
+  cursor: pointer;
 }
