--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -33,7 +33,6 @@ button:focus {
   width: 30vw;
   min-height: 100vh;
   border-right: 2px solid #07c837;
-  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,15 +42,55 @@ button:focus {
   padding: 0 10px;
   text-align: center;
   align-self: start;
-  margin: 20px 0 20px 0;
+  margin: 40px 0 40px 0;
   color: #fff;
+  width: 100%;
+  position: relative;
+}
+#sidebar h2::after {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  border: 10px solid transparent;
+  border-top: 10px solid white;
+  bottom: -30px;
+  left: 47%;
+}
+#sidebar h3 {
+  margin-bottom: 10px;
+}
+
+#sidebar #ingredientsList,
+#sidebar #usedIngredients {
+  padding: 20px;
+  text-align: left;
   width: 100%;
 }
 
+#sidebar #ingredientsList button {
+  font-size: 13px;
+  padding: 5px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  display: inline-block;
+}
+
+#sidebar #usedIngredients small {
+  display: block;
+  opacity: 0.7;
+  margin-bottom: 10px;
+}
+
+#sidebar #usedIngredients span {
+  cursor: pointer;
+}
+#sidebar #usedIngredients span:hover {
+  color: #07c837;
+}
+
 #list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 20px 30px;
   flex-grow: 1;
   transition: all 0.3s ease-in-out;
 }
