--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -84,6 +84,7 @@ button:focus {
 
 #sidebar #usedIngredients span {
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 #sidebar #usedIngredients span:hover {
   color: #07c837;
@@ -102,10 +103,16 @@ button:focus {
   opacity: 1;
   pointer-events: all;
   transition: all 0.3s ease-in-out;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #07c837;
 }
 
-#list .single.show {
-  opacity: 1;
+#list .single img {
+  width: 170px;
+  margin-bottom: 7px;
+}
+#list .single h3 {
+  margin-bottom: 10px;
 }
 
 .hidden {
@@ -123,28 +130,88 @@ button:focus {
   opacity: 1;
   transition: all 0.3s ease-in-out;
   z-index: 100;
-  cursor: pointer;
 }
 
 .modal {
   position: absolute;
   top: 20vh;
-  left: 25vh;
-  min-height: 40vh;
+  left: 32vw;
+  height: 60vh;
   width: 50vw;
   pointer-events: all;
   opacity: 1;
   background: #242423;
-  padding: 20px;
+  padding: 40px 35px;
+}
+.modal-content {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+.modal p.summary {
+  line-height: 27px;
+  margin-bottom: 15px;
+}
+.modal p.modal-close {
+  margin-bottom: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 35px;
+  width: 35px;
+  z-index: 101;
+  color: #fff;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.modal p.modal-close:hover {
+  color: #07c837;
 }
 
 .modal a.link {
   transition: all 0.3s ease-in-out;
   font-size: 16px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding: 10px 15px;
-  display: block;
+  display: inline-block;
   background: #07c837;
   border: none;
   cursor: pointer;
+  text-decoration: none;
+}
+
+/* loader */
+#loading {
+  height: 0;
+  font-size: 30px;
+}
+#loading:after {
+  content: ' .';
+  animation: dots 1s steps(5, end) infinite;
+  position: relative;
+  bottom: 25px;
+}
+
+@keyframes dots {
+  0%,
+  20% {
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  40% {
+    color: white;
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  60% {
+    text-shadow: 0.25em 0 0 white, 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  80%,
+  100% {
+    text-shadow: 0.25em 0 0 white, 0.5em 0 0 white;
+  }
 }
