--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -30,6 +30,7 @@ button:focus {
 }
 
 #sidebar {
+  padding-top: 20px;
   width: 30vw;
   min-height: 100vh;
   border-right: 2px solid #07c837;
@@ -42,7 +43,7 @@ button:focus {
   padding: 0 10px;
   text-align: center;
   align-self: start;
-  margin: 40px 0 40px 0;
+  margin: 20px 0 35px 0;
   color: #fff;
   width: 100%;
   position: relative;
@@ -52,9 +53,9 @@ button:focus {
   width: 0;
   height: 0;
   position: absolute;
-  border: 10px solid transparent;
-  border-top: 10px solid white;
-  bottom: -30px;
+  border: 7px solid transparent;
+  border-top: 7px solid white;
+  bottom: -20px;
   left: 47%;
 }
 #sidebar h3 {
@@ -93,6 +94,7 @@ button:focus {
 #list {
   padding: 20px 30px;
   flex-grow: 1;
+  max-width: 68vw;
   transition: all 0.3s ease-in-out;
   height: 100vh;
   overflow-y: scroll;
@@ -113,6 +115,16 @@ button:focus {
 }
 #list .single h3 {
   margin-bottom: 10px;
+}
+#list .single p.info {
+  max-width: 100%;
+  font-size: 13px;
+  word-wrap: break-word;
+  margin-bottom: 7px;
+}
+#list .single button {
+  margin-top: 15px;
+  margin-bottom: 25px;
 }
 
 .hidden {
@@ -183,6 +195,22 @@ button:focus {
   border: none;
   cursor: pointer;
   text-decoration: none;
+}
+
+#formData {
+  padding: 20px;
+}
+
+#formData input[type='number'] {
+  background: transparent;
+  border: none;
+  width: 45px;
+  font-size: 17px;
+  margin-bottom: 10px;
+}
+
+#formData label {
+  font-size: 14px;
 }
 
 /* loader */
