--- a/modules/recipe-api-content/recipe-api-style.css
+++ b/modules/recipe-api-content/recipe-api-style.css
@@ -30,7 +30,7 @@ button:focus {
 }
 
 #sidebar {
-  padding-top: 20px;
+  padding: 10px 5px;
   width: 30vw;
   min-height: 100vh;
   border-right: 2px solid #07c837;
@@ -64,7 +64,7 @@ button:focus {
 
 #sidebar #ingredientsList,
 #sidebar #usedIngredients {
-  padding: 20px;
+  padding: 10px;
   text-align: left;
   width: 100%;
 }
@@ -77,7 +77,7 @@ button:focus {
   display: inline-block;
 }
 
-#sidebar #usedIngredients small {
+small {
   display: block;
   opacity: 0.7;
   margin-bottom: 10px;
@@ -198,7 +198,12 @@ button:focus {
 }
 
 #formData {
-  padding: 20px;
+  padding: 10px;
+  width: 100%;
+}
+
+#formData input {
+  margin-bottom: 10px;
 }
 
 #formData input[type='number'] {
@@ -206,7 +211,6 @@ button:focus {
   border: none;
   width: 45px;
   font-size: 17px;
-  margin-bottom: 10px;
 }
 
 #formData label {
@@ -242,4 +246,8 @@ button:focus {
   100% {
     text-shadow: 0.25em 0 0 white, 0.5em 0 0 white;
   }
+}
+
+.single #loading {
+  margin: -10px 0 10px 30px;
 }
